Fixes bug where error msg on modals is not visible.

--- a/src/app/vis/menucomponents/menucomponents.less
+++ b/src/app/vis/menucomponents/menucomponents.less
@@ -21,25 +21,18 @@
 
 .modal-tabset-wrapper {
   height: 100%;
-  oveflow: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
 
 .modal-tabset {
   height: 100%;
-  oveflow: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
 
-.new-graph-menu {
-  height: 100%;
-  > div {
-    display: flex;
-    flex-direction: column;
-  }
-}
 
 .modal-menu ul.nav,
 {
@@ -70,12 +63,14 @@
 .heatmap-options-container {
   display: flex; 
   flex-direction: column; 
-  height: 100%; overflow: 
-  hidden;
+  height: 100%; 
+  overflow: hidden;
 }
 
 .heatmap-multiple-variable-container {
-  flex: 1 1 auto; height: 1; display: block;
+  flex: 1 1 auto; 
+  height: 30px;
+  display: block;
 }
 
 
